; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_git.c__git_receivepack_ls.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_git.c__git_receivepack_ls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32 }

@GIT_NET_URL_INIT = common dso_local global %struct.TYPE_11__ zeroinitializer, align 4
@prefix_git = common dso_local global i32 0, align 4
@cmd_receivepack = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*, i8*, i32**)* @_git_receivepack_ls to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_git_receivepack_ls(%struct.TYPE_9__* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca %struct.TYPE_11__, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_10__*, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %12 = bitcast %struct.TYPE_11__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_11__* @GIT_NET_URL_INIT to i8*), i64 8, i1 false)
  %13 = load i8*, i8** %6, align 8
  store i8* %13, i8** %9, align 8
  %14 = load i32**, i32*** %7, align 8
  store i32* null, i32** %14, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* @prefix_git, align 4
  %17 = call i32 @git__prefixcmp(i8* %15, i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %3
  %20 = load i32, i32* @prefix_git, align 4
  %21 = call i32 @strlen(i32 %20)
  %22 = load i8*, i8** %9, align 8
  %23 = sext i32 %21 to i64
  %24 = getelementptr inbounds i8, i8* %22, i64 %23
  store i8* %24, i8** %9, align 8
  br label %25

25:                                               ; preds = %19, %3
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @git_net_url_parse(%struct.TYPE_11__* %8, i8* %26)
  store i32 %27, i32* %11, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i32, i32* %11, align 4
  store i32 %30, i32* %4, align 4
  br label %64

31:                                               ; preds = %25
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = load i32, i32* @cmd_receivepack, align 4
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32**, i32*** %7, align 8
  %40 = call i32 @git_proto_stream_alloc(%struct.TYPE_9__* %32, i8* %33, i32 %34, i32 %36, i32 %38, i32** %39)
  store i32 %40, i32* %11, align 4
  %41 = call i32 @git_net_url_dispose(%struct.TYPE_11__* %8)
  %42 = load i32, i32* %11, align 4
  %43 = icmp slt i32 %42, 0
  br i1 %43, label %44, label %49

44:                                               ; preds = %31
  %45 = load i32**, i32*** %7, align 8
  %46 = load i32*, i32** %45, align 8
  %47 = call i32 @git_proto_stream_free(i32* %46)
  %48 = load i32, i32* %11, align 4
  store i32 %48, i32* %4, align 4
  br label %64

49:                                               ; preds = %31
  %50 = load i32**, i32*** %7, align 8
  %51 = load i32*, i32** %50, align 8
  %52 = bitcast i32* %51 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %52, %struct.TYPE_10__** %10, align 8
  %53 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %54 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @git_stream_connect(i32 %55)
  store i32 %56, i32* %11, align 4
  %57 = icmp slt i32 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %49
  %59 = load i32, i32* %11, align 4
  store i32 %59, i32* %4, align 4
  br label %64

60:                                               ; preds = %49
  %61 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %62 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %63 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %62, i32 0, i32 0
  store %struct.TYPE_10__* %61, %struct.TYPE_10__** %63, align 8
  store i32 0, i32* %4, align 4
  br label %64

64:                                               ; preds = %60, %58, %44, %29
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @git__prefixcmp(i8*, i32) #2

declare dso_local i32 @strlen(i32) #2

declare dso_local i32 @git_net_url_parse(%struct.TYPE_11__*, i8*) #2

declare dso_local i32 @git_proto_stream_alloc(%struct.TYPE_9__*, i8*, i32, i32, i32, i32**) #2

declare dso_local i32 @git_net_url_dispose(%struct.TYPE_11__*) #2

declare dso_local i32 @git_proto_stream_free(i32*) #2

declare dso_local i32 @git_stream_connect(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
